# ai-copilot

./: .env.example  Dockerfile  README.md  app.config.ts  i18n.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: docker-publish.yml
backend/langserve/: README.md  pyproject.toml  requirements.txt
backend/langserve/app/: server.py
backend/langserve/app/chains/chat/: chat_and_vision.py
backend/langserve/app/chains/demo/chat_history/: tuples.py
backend/langserve/app/chains/demo/configure/: __init__.py
backend/langserve/app/chains/demo/hello_world/: chain.py  chat_playground.py
backend/langserve/app/chains/demo/load_document/: file_processing.py
backend/langserve/app/chains/demo/rag/: __init__.py  pdf.py  pdf_and_spacy.py  pdf_and_spacy_multi_query.py  word.py
backend/langserve/app/chains/rag/: load_local_knowledge.py  local_knowledge_rag.py  pdf_and_spacy_multi_query.py  xiaofeizhequanyi_demo.py
backend/langserve/app/chains/vision/: vision.py
backend/langserve/app/util/: message.py  model.py
components/biz/: BizConfigModelSelect.vue
components/lu/: Lu.vue  LuAiMessage.vue  LuHistoryMessages.vue  LuHumanMessage.vue  LuToggle.vue
components/sy/: SyHiddenInputFile.vue
components/ux/: UxInputFile.vue
composables/: useBizIntermediteStep.ts  useMarkdown.ts
pages/: index.vue
pages/chat/: chat-and-vision-invoke.vue  chat-and-vision-stream-or-log.vue  chat-and-vision-stream.vue  chat-and-vision.vue  chat.vue
pages/demo/: agent.vue  autogpt.vue  conversation-rag.vue  (+5 more)
plugins/: dayjs.ts
utils/: ObjectUtils.ts  common.ts
(+33 files in other folders)
